# pokered

./: meson.build
gfx/battle/: meson.build
gfx/credits/: meson.build
gfx/emotes/: meson.build
gfx/font/: meson.build
gfx/icons/: meson.build
gfx/intro/: meson.build
gfx/overworld/: meson.build
gfx/player/: meson.build
gfx/pokedex/: meson.build
gfx/pokemon/back/: meson.build
gfx/pokemon/front/: meson.build
gfx/sgb/: meson.build
gfx/slots/: meson.build
gfx/splash/: meson.build
gfx/sprites/: meson.build
gfx/tilesets/: meson.build
gfx/tilesets/flower/: meson.build
gfx/title/: meson.build
gfx/town_map/: meson.build
gfx/trade/: meson.build
gfx/trainer_card/: meson.build
gfx/trainers/: meson.build
