pngs = [
    'scientist',
    'rocker',
    'swimmer',
    'safari_zone_worker',
    'gym_guide',
    'gramps',
    'clerk',
    'fishing_guru',
    'granny',
    'nurse',
    'link_receptionist',
    'silph_president',
    'silph_worker_m',
    'warden',
    'captain',
    'fisher',
    'koga',
    'guard',
    'poke_ball',
    'fossil',
    'boulder',
    'paper',
    'pokedex',
    'clipboard',
    'snorlax',
    'old_amber',
    'gambler_asleep',
    'red_bike',
    'red',
    'blue',
    'oak',
    'youngster',
    'monster',
    'cooltrainer_f',
    'cooltrainer_m',
    'little_girl',
    'bird',
    'middle_aged_man',
    'gambler',
    'super_nerd',
    'girl',
    'hiker',
    'beauty',
    'gentleman',
    'daisy',
    'biker',
    'sailor',
    'cook',
    'bike_shop_clerk',
    'mr_fuji',
    'giovanni',
    'rocket',
    'channeler',
    'waiter',
    'silph_worker_f',
    'middle_aged_woman',
    'brunette_girl',
    'lance',
    'mom',
    'balding_guy',
    'little_boy',
    'gameboy_kid',
    'fairy',
    'agatha',
    'bruno',
    'lorelei',
    'seel',
]

foreach f : pngs
  gen = rgbds.gfx('@0@_conv.2bpp'.format(f), '@0@.png'.format(f))
  gfx += custom_target(output: '@0@.2bpp'.format(f),
                     input: gen,
                     command: [tools_gfx, '-o', '@OUTPUT@', '@INPUT@'])
endforeach
