pngs = [
    'youngster',
    'bugcatcher',
    'lass',
    'sailor',
    'jr.trainerm',
    'jr.trainerf',
    'pokemaniac',
    'supernerd',
    'hiker',
    'biker',
    'burglar',
    'engineer',
    'fisher',
    'swimmer',
    'cueball',
    'gambler',
    'beauty',
    'psychic',
    'rocker',
    'juggler',
    'tamer',
    'birdkeeper',
    'blackbelt',
    'rival1',
    'prof.oak',
    'scientist',
    'giovanni',
    'rocket',
    'cooltrainerm',
    'cooltrainerf',
    'bruno',
    'brock',
    'misty',
    'lt.surge',
    'erika',
    'koga',
    'blaine',
    'sabrina',
    'gentleman',
    'rival2',
    'rival3',
    'lorelei',
    'channeler',
    'agatha',
    'lance',
]

foreach f : pngs
  gen = rgbds.gfx('@0@_conv.2bpp'.format(f), '@0@.png'.format(f))
  gen = custom_target(output: '@0@.2bpp'.format(f),
                     input: gen,
                     command: [tools_gfx, '-o', '@OUTPUT@', '@INPUT@'])
  gfx += custom_target(output: '@0@.pic'.format(f),
                      input: gen,
                      command: [tools_pkmncompress, '@INPUT@', '@OUTPUT@'])
endforeach
