pngs = [
    'rhydonb',
    'kangaskhanb',
    'nidoranmb',
    'clefairyb',
    'spearowb',
    'voltorbb',
    'nidokingb',
    'slowbrob',
    'ivysaurb',
    'exeggutorb',
    'lickitungb',
    'exeggcuteb',
    'grimerb',
    'gengarb',
    'nidoranfb',
    'nidoqueenb',
    'cuboneb',
    'rhyhornb',
    'laprasb',
    'arcanineb',
    'gyaradosb',
    'shellderb',
    'tentacoolb',
    'gastlyb',
    'scytherb',
    'staryub',
    'blastoiseb',
    'pinsirb',
    'tangelab',
    'growlitheb',
    'onixb',
    'fearowb',
    'pidgeyb',
    'slowpokeb',
    'kadabrab',
    'gravelerb',
    'chanseyb',
    'machokeb',
    'mr.mimeb',
    'hitmonleeb',
    'hitmonchanb',
    'arbokb',
    'parasectb',
    'psyduckb',
    'drowzeeb',
    'golemb',
    'magmarb',
    'electabuzzb',
    'magnetonb',
    'koffingb',
    'mankeyb',
    'seelb',
    'diglettb',
    'taurosb',
    'farfetchdb',
    'venonatb',
    'dragoniteb',
    'doduob',
    'poliwagb',
    'jynxb',
    'moltresb',
    'articunob',
    'zapdosb',
    'dittob',
    'meowthb',
    'krabbyb',
    'vulpixb',
    'ninetalesb',
    'pikachub',
    'raichub',
    'dratinib',
    'dragonairb',
    'kabutob',
    'kabutopsb',
    'horseab',
    'seadrab',
    'sandshrewb',
    'sandslashb',
    'omanyteb',
    'omastarb',
    'jigglypuffb',
    'wigglytuffb',
    'eeveeb',
    'flareonb',
    'jolteonb',
    'vaporeonb',
    'machopb',
    'zubatb',
    'ekansb',
    'parasb',
    'poliwhirlb',
    'poliwrathb',
    'weedleb',
    'kakunab',
    'beedrillb',
    'dodriob',
    'primeapeb',
    'dugtriob',
    'venomothb',
    'dewgongb',
    'caterpieb',
    'metapodb',
    'butterfreeb',
    'machampb',
    'golduckb',
    'hypnob',
    'golbatb',
    'mewtwob',
    'snorlaxb',
    'magikarpb',
    'mukb',
    'kinglerb',
    'cloysterb',
    'electrodeb',
    'clefableb',
    'weezingb',
    'persianb',
    'marowakb',
    'haunterb',
    'abrab',
    'alakazamb',
    'pidgeottob',
    'pidgeotb',
    'starmieb',
    'bulbasaurb',
    'venusaurb',
    'tentacruelb',
    'goldeenb',
    'seakingb',
    'ponytab',
    'rapidashb',
    'rattatab',
    'raticateb',
    'nidorinob',
    'nidorinab',
    'geodudeb',
    'porygonb',
    'aerodactylb',
    'magnemiteb',
    'charmanderb',
    'squirtleb',
    'charmeleonb',
    'wartortleb',
    'charizardb',
    'oddishb',
    'gloomb',
    'vileplumeb',
    'bellsproutb',
    'weepinbellb',
    'victreebelb',

    'mewb',
]

foreach f : pngs
  gen = rgbds.gfx('@0@_conv.2bpp'.format(f), '@0@.png'.format(f))
  gen = custom_target(output: '@0@.2bpp'.format(f),
                     input: gen,
                     command: [tools_gfx, '-o', '@OUTPUT@', '@INPUT@'])
  gfx += custom_target(output: '@0@.pic'.format(f),
                      input: gen,
                      command: [tools_pkmncompress, '@INPUT@', '@OUTPUT@'])
endforeach
